--- a/libs/Bus/Makefile.in
+++ b/libs/Bus/Makefile.in
@@ -6,7 +6,7 @@ LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
 
 NAME = bus
-OBJS = unix.o manager.o
+OBJS = manager.o util.o
 
 .PHONY: all clean
 .SUFFIXES: .c .o
@@ -17,7 +17,7 @@ libfb$(NAME).so: $(OBJS)
 	$(CC) $(LDFLAGS) -shared -o $@ $(OBJS) $(LIBS)
 
 .c.o:
-	$(CC) $(CFLAGS) -fPIC -o $@ $<
+	$(CC) $(CFLAGS) -c -fPIC -o $@ $<
 
 clean:
 	rm -f *.so *.o
