--- a/libs/Makefile.in
+++ b/libs/Makefile.in
@@ -18,10 +18,10 @@ distclean: clean
 	rm -f Makefile */Makefile config.h
 
 install: all
-	mkdir -p @PREFIX@/lib
-	cp -rf Library/* @PREFIX@/lib/
-	mkdir -p @PREFIX@/include
-	cp -rf Include/* @PREFIX@/include/
+	mkdir -p $(DESTDIR)/@PREFIX@/lib
+	cp -rf Library/* $(DESTDIR)/@PREFIX@/lib/
+	mkdir -p $(DESTDIR)/@PREFIX@/include
+	cp -rf Include/* $(DESTDIR)/@PREFIX@/include/
 
 clean:
 	for i in $(BUILD); do \
