--- a/docs/Makefile
+++ b/docs/Makefile
@@ -12,7 +12,7 @@ README.ps: README.$(MACRO)
 	tbl README.$(MACRO) | groff -Tps -$(MACRO) > README.ps
 
 ../README: README.ansi
-	cat README.ansi | perl -pe 's/\e\[[0-9;]*m(?:\e\[K)?//g' > ../README
+	cat README.ansi | perl -pe 's/\e\[[0-9;]*m(?:\e\[K)?//g' | col -b > ../README
 
 README.pdf: README.ps
 	gs -sDEVICE=pdfwrite -sOutputFile=README.pdf -dNOPAUSE -dBATCH README.ps
